minor fix to search overlapping social links

--- a/src/less/import/main.less
+++ b/src/less/import/main.less
@@ -205,7 +205,7 @@ header {
         position: relative;
         z-index: 1000000;
 
-        @media (max-width: 1140px) {
+        @media (max-width: 1190px) {
             display: none;
             visibility: hidden;
         }
